# rust-examples

./: Cargo.toml  LICENSE  README.md
buffer-refresh/: Cargo.toml  test.txt
buffer-refresh/src/: main.rs
buffer-seeker/: Cargo.toml
buffer-seeker/src/: main.rs
buffer-spliter/: Cargo.toml
buffer-spliter/src/: main.rs
c-include/: Cargo.toml  build.rs
c-include/my_c_lib/: lib1.c  lib1.h  lib2.c
c-include/src/: main.rs
rolling-hash/: build.rs
rolling-hash/src/: main.rs
simple-file-concat/: Cargo.toml
simple-file-concat/src/: cli.rs  main.rs  prio.rs
various/: mul_n_square.rs
