[package]
name = "simple-file-concat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
verbosity = "0.1.0"
